# brainfuck-from-text

./: Cargo.toml  README.md
examples/: hello.rs  use_bf.rs
src/: lib.rs  main.rs
