[package]
name = "brainfuck-from-text"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainfuck-interpreter = { git = "https://github.com/TyomoGit/brainfuck-interpreter-rs.git", version = "0.5.0" }
